--- a/motion.conf
+++ b/motion.conf
@@ -17,5 +17,7 @@ target_dir images
 # - Name of S3 bucket
 # We also pass the timestamp of the event to use as a key for the image.
 #  Numbers must be in E.164 format.
-on_event_start python motionalert.py --account_sid=ACxxxxxxx --auth_token=yyyyy --aws_access_key_id=wwwww --aws_secret_key=zzzz --s3_bucket=your-bucket-name-here --twilio_number=+15556667777 --receiving_number=+15558675309 --timestamp==%Y-%m-%d-%H-%M-%S-%q --body="Motion detected at %H:%M!" --motion_target_dir images
-on_event_end python motionalert.py --account_sid=ACxxxxxxx --auth_token=yyyyy --aws_access_key_id=wwwww --aws_secret_key=zzzz --s3_bucket=your-bucket-name-here --twilio_number=+15556667777 --receiving_number=+15558675309 --timestamp==%Y-%m-%d-%H-%M-%S-%q --body="Motion ended at %H:%M." --motion_target_dir images 
+#  When the event starts, we'll send 3 images that are a second apart
+on_event_start python motionalert.py --account_sid=ACxxxxxxx --auth_token=yyyyy --aws_access_key_id=wwwww --aws_secret_key=zzzz --s3_bucket=your-bucket-name-here --twilio_number=+15556667777 --receiving_number=+15558675309 --timestamp==%Y-%m-%d-%H-%M-%S-%q --body="Motion detected at %H:%M!" --motion_target_dir images --num_of_images 3
+# When the event ends, we'll send the last frame.
+on_event_end python motionalert.py --account_sid=ACxxxxxxx --auth_token=yyyyy --aws_access_key_id=wwwww --aws_secret_key=zzzz --s3_bucket=your-bucket-name-here --twilio_number=+15556667777 --receiving_number=+15558675309 --timestamp==%Y-%m-%d-%H-%M-%S-%q --body="Motion ended at %H:%M." --motion_target_dir images --num_of_images 1
